# scaffy

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
examples/kings_and_queens/document/: description.md  identity.md  lineage.md  sequence.md
examples/kings_and_queens/query/: queens.rq
scaffy/: __init__.py  cli.py  document.py
scaffy/templates/: dataset.html  page.html  query.html
